# tiraprojekti

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
documentation/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: algorithm_base.py  clock.py  dijkstra.py  event_queue.py  filereader.py  jps.py  level.py  loop.py  main.py  renderer.py
src/tests/: dijkstra_test.py  jps_test.py
src/tests/maps/: testmap1.map
