[tool.poetry]
name = "tiraprojekti"
version = "0.1.0"
description = ""
authors = ["Leevi Kokkinen <leevi.kokkinen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
coverage = "^6.3"
unittest = "^0.0"
pytest = "^6.2.5"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
